--- a/2nd_task/style.css
+++ b/2nd_task/style.css
@@ -61,6 +61,11 @@ li {
 #welcome-form .container {
   padding: 5% 7%;
 }
+.overlay {
+  height: 100%;
+  width: 100%;
+  background-color: rgb(0 0 0 / 64%);
+}
 #welcome-form .container .left {
   font-size: 35px;
   color: lightgoldenrodyellow;
@@ -129,4 +134,242 @@ li {
   border: none;
   background-color: #ff9b51;
   border-radius: 0px 0px 10px 10px;
+}
+.social_links {
+  margin: auto;
+  height: 100px;
+  background-color: lightgray;
+}
+.social_links .description {
+  width: 22%;
+  margin: 1% 9%;
+  float: left;
+}
+.icon-bar {
+  width: 40%;
+  margin: 1% 8%;
+  float: right;
+}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+.clickable-tabs {
+  height: 450px;
+  margin: auto;
+  background-color: #e6e6e6;
+}
+.row {
+  height: 100%;
+  margin: auto;
+  padding: 5%;
+}
+.column {
+  float: left;
+  width: 33.33%;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.tablinks {
+  color: white;
+  padding: 17px 7px;
+  cursor: pointer;
+  width: 24%;
+  display: block;
+  padding: 9%;
+  margin: 0%;
+  background-color: #0c0e0fd4;
+}
+.tablinks:hover {
+  background-color: #ff9b51;
+}
+.clickable-tabs-right {
+  width: 20%;
+  height: 60%;
+}
+.clickable-tabs-left {
+  height: 60%;
+}
+.clickable-tabs-left img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: 0%;
+  padding: 2% 33%;
+}
+#clickable-tabs-middle-container {
+  padding: 2%;
+  font-size: 20px;
+  text-align: left;
+}
+.clickable-tabs-button {
+  background: #ff9b51;
+  border: 1px solid lightgray;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  float: left;
+  margin-right: 25%;
+}
+.p1 {
+  height: 450px;
+  margin: auto;
+  display: inline-block;
+}
+.p1-image {
+  height: 70%;
+  width: 50%;
+  float: left;
+}
+.p1-image img {
+  max-width: 100%;
+  max-height: 105%;
+  display: block;
+  margin: 0%;
+  padding: 2% 13%;
+}
+.p1-pargrapgh {
+  height: 70%;
+  float: right;
+  width: 50%;
+}
+.p1-pargrapgh-con {
+  margin: 11px;
+}
+.p2 {
+  height: 450px;
+  margin: auto;
+  display: inline-block;
+  background-color: #e6e6e6;
+}
+.p2-image {
+  height: 70%;
+  width: 50%;
+  float: right;
+}
+.p2-image img {
+  max-width: 100%;
+  max-height: 105%;
+  display: block;
+  margin: 0%;
+  padding: 2% 13%;
+}
+.p2-pargrapgh {
+  height: 70%;
+  float: left;
+  width: 50%;
+}
+.p2-pargrapgh-con {
+  margin: 11px;
+}
+footer {
+  margin: auto;
+  height: 100px;
+  background-color: black;
+}
+.icon-bar-footer {
+  padding: 0% 27%;
+}
+footer span {
+  color: white;
+  padding: 0% 36%;
+  font-size: 30px;
+}
+.contact-us-section {
+  height: 550px;
+  margin: auto;
+}
+.contact-us {
+  padding: 2% 0%;
+}
+.contact-us h1 {
+  font-size: 35px;
+  padding: 0% 37%;
+}
+.contact-us hr {
+  width: 22%;
+  height: 4px;
+  border: none;
+  background-color: #ff9b51;
+  margin: 0% 33%;
+}
+.contact-us p {
+  font-size: 21px;
+  margin: auto;
+  padding: 2% 30%;
+}
+.contact-us-form input,
+textarea {
+  width: 75%;
+  margin: 30px 0px 25px 0px;
+  display: inline-block;
+  display: inline-block;
+  border: none;
+  border-bottom: 2px solid lightslategray;
+}
+.contact-us-form .input {
+  margin: 0% 0%;
+  width: 15%;
+  height: 58px;
+  border: none;
+  background-color: #ff9b51;
+  border-radius: 10px;
+  margin-top: 17%;
+}
+.subject {
+  width: 30%;
+  float: left;
+  margin-left: 5%;
+}
+.bottom-area {
+  width: 33%;
+  float: right;
+  margin-right: 12%;
+}
+.style-download {
+  height: 500px;
+  background-image: url(/2nd_task/images/download.jpg);
+  margin: auto;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.style-download .overlay {
+  background-color: #00000047;
+}
+.download-area h1 {
+  font-size: 35px;
+  color: white;
+  padding: 2% 28%;
+}
+.download-area hr {
+  width: 22%;
+  height: 4px;
+  border: none;
+  background-color: white;
+  padding: 0% 0%;
+  margin: 1% 32%;
+}
+.download-area p {
+  font-size: 20px;
+  color: white;
+  margin: 6% 25%;
+}
+.download-area button {
+  background: none;
+  border: 1px solid lightgray;
+  color: white;
+  padding: 11px 23px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 3% 38%;
 }
