--- a/node/1st_task_Muhammed.Abdelaziz.Kamel/css/style.css
+++ b/node/1st_task_Muhammed.Abdelaziz.Kamel/css/style.css
@@ -4,17 +4,20 @@ body {
 }
 
 /* Include the padding and border in an element's total width and height */
+
 * {
   box-sizing: border-box;
 }
 
 /* Remove margins and padding from the list */
+
 ul {
   margin: 0;
   padding: 0;
 }
 
 /* Style the list items */
+
 ul li {
   cursor: pointer;
   position: relative;
@@ -24,22 +27,27 @@ ul li {
   font-size: 18px;
   transition: 0.2s;
 }
-  /* make the list items unselectable */
-  ul li{
+
+/* make the list items unselectable */
+
+ul li {
   user-select: none;
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
+
 ul li:nth-child(odd) {
   background: #f9f9f9;
 }
 
 /* Darker background-color on hover */
+
 ul li:hover {
   background: #ddd;
 }
 
 /* When clicked on, add a background color and strike out text */
+
 ul li.checked {
   background: #888;
   color: #fff;
@@ -47,8 +55,9 @@ ul li.checked {
 }
 
 /* Add a "checked" mark when clicked on */
+
 ul li.checked::before {
-  content: '';
+  content: "";
   position: absolute;
   border-color: #fff;
   border-style: solid;
@@ -61,6 +70,7 @@ ul li.checked::before {
 }
 
 /* Style the close button */
+
 .close {
   position: absolute;
   right: 0;
@@ -74,6 +84,7 @@ ul li.checked::before {
 }
 
 /* Style the header */
+
 .header {
   background-color: #f44336;
   padding: 30px 40px;
@@ -82,6 +93,7 @@ ul li.checked::before {
 }
 
 /* Clear floats after the header */
+
 .header:after {
   content: "";
   display: table;
@@ -89,6 +101,7 @@ ul li.checked::before {
 }
 
 /* Style the input */
+
 input {
   margin: 0;
   border: none;
@@ -100,6 +113,7 @@ input {
 }
 
 /* Style the "Add" button */
+
 .addBtn {
   padding: 10px;
   width: 25%;
